# KITSUNETSUKI-SDK

./: .gitignore  Dockerfile  Dockerfile.agent  Dockerfile.sdk  README.md  appx.py  build_update.sh  docker-compose.yml  find_windows_sdk.py  jenkins.jobs.yaml  jenkins.lyn.sh  jenkins.pipeline  jenkins.win-appx.bat  jenkins.win-appx.sh  jenkins.win.bat  jenkins.win.sh  jenkins_build.bat  jenkins_build.sh  jenkins_jobs.ini.example  jobs-update.sh  ksdk.yml  ksdk_build.yml  podman_build.sh  requirements.txt  sdk.sh  sdk.yml  sdk_down.sh  sdk_up.sh  version_up.sh  windows_sdk.py
conda/: README.md  build_update.sh
conda/blender/: README.md  bld.bat  blender-oiio.patch  build.sh  cmake1.patch  cmake2.patch  cmake3.patch  export.h  meta.yaml  optional.patch  platform.patch  pugixml.patch  rna_wm.patch  run_test.py  tbb.patch
conda/blender-thirdparty/: 185.diff  README.md  bld.bat  boost.py  build.sh  meta.yaml
conda/blender/boost/lib/: libboost_chrono-vc141-mt-x64-1_70.lib  libboost_date_time-vc141-mt-x64-1_70.lib  libboost_filesystem-vc141-mt-x64-1_70.lib  libboost_locale-vc141-mt-x64-1_70.lib  libboost_regex-vc141-mt-x64-1_70.lib  libboost_system-vc141-mt-x64-1_70.lib  libboost_thread-vc141-mt-x64-1_70.lib
conda/bullet/: README.md  bld.bat  build.sh  meta.yaml
conda/kcc/: CMakeLists.txt  README.md  bld.bat  build.sh  kcc_bullet.cxx  kcc_bullet.h  kcc_config.cxx  kcc_config.h  kcc_config.hxx  kcc_node.cxx  kcc_node.hxx  kcc_panda.cxx  kcc_panda.h  meta.yaml  run_test.py
conda/kcc/bullet/: kcc.h
conda/kcc/panda/: config.cxx  config.h  hitbox.cxx  hitbox.h  kcc.cxx  kcc.h
conda/kphys/: CMakeLists.txt  README.md  bld.bat  build.sh  meta.yaml  run_test.py
conda/kphys/bullet/: kcc.cxx
conda/kphys/kphys/: interrogate.h
conda/kphys/kphys/bullet/: controller.cxx  controller.h  world.cxx  world.h
conda/kphys/kphys/panda/: config.cxx  config.h  controller.cxx  controller.h  hitbox.cxx  hitbox.h  spring.cxx  spring.h  world.cxx  world.h
conda/kphys/panda/: hitbox.cxx  kcc.cxx  kcc.h
conda/panda3d/: 01_bullet_v3.patch  01_libs.patch  02_bullet_char.patch  03_icon.patch  04_libs.patch  06_py_prefix.patch  07_rgba.patch  10_libp3rplight.patch  README.md  bld.bat  build.sh  bullet.patch  bullet3.patch  egg1.patch  egg2.patch  egg3.patch  fabrik.patch  fabrik108.patch  icon.patch  icon108.patch  is_nan.patch  libs.patch  meta.yaml  nopy.patch  openssl.patch  prefix.patch  prefix108.patch  rgba.patch  rp_light.patch  run_test.py  udp.patch  vs2022.patch
conda/panda3d-kphys/: README.md  bld.bat  build.sh  meta.yaml  run_test.py
conda/panda3d-krender/: README.md  bld.bat  build.sh  meta.yaml  run_test.py
conda/realsense/: build.sh  meta.yaml
conda/render_pipeline/: README.md  bld.bat  build.sh  dte.patch  k_shading_models.patch  lights.patch  meta.yaml  noflag.patch  rp-setup.patch  rp.patch  run_test.py
conda/runtime/: README.md  bld.bat  build.sh  exclude.txt  meta.yaml  req.txt
conda/runtime-rp/: README.md  bld.bat  build.sh  meta.yaml
conda/sdl/: build.sh  meta.yaml
conda/yabee/: README.md  anim.patch  build.sh  dont_run_test.py  meta.yaml  setup.py  yabee_name.patch
conda/yabee/yabee_kitsunetsuki/: __init__.py
container/: Dockerfile  README.md  build.sh  builder.yml  docker-compose.yml  run_sdk.sh  run_sdk_builder.sh
container/sdk_base/: Dockerfile  README.md  docker-compose.yml  podman.sh  podman_build.sh  podman_run.sh
container/sdk_builder/: Dockerfile  README.md  builder.yml  docker-compose.yml  jenkins-job-builder.yml  podman.sh  podman_build.sh  run-jenkins
container/sdk_builder/jenkins_jobs/: jenkins_jobs.ini.example  jobs.yml
container/sdk_full/: Dockerfile
container/sdk_main/: Dockerfile  podman.sh  podman_build.sh  podman_run.sh  sdk.sh  sdk.yml
container/sdk_toolbox/: Dockerfile  sdk.yml
jenkins-jobs/: blender-thirdparty.yml  blender.yml  bullet.yml  jenkins_jobs.ini.example  ogg.yml  panda3d-extras.yml  panda3d.yml  pipeline.yml  python.yml  realsense.yml  requirements.txt  sdk.yml  sdl.yml  update.sh  vorbis.yml
jobs/: blender-thirdparty.yml  bullet.yml  freetype.yml  harfbuzz.yml  interrogate.yml  ogg.yml  openal.yml  panda3d-extras.yml  panda3d-thirdparty.yml  panda3d.yml  pipeline.yml  python.yml  realsense.yml  sdk.yml  sdl.yml  view.yml  vorbis.yml
jobs/panda3d/: 01_libs.1.11.patch  03_icon.1.11.patch  06_py_prefix.1.11.patch  06_py_prefix.patch  08_kbd.patch  10_libp3rplight.1.11.patch  13_win_path.patch  icon.h
jobs/sdk/: METADATA  requirements.txt
panda3d/: 01_libs.1.11.patch  01_libs.patch  03_icon.patch  05_py_noinst.patch  06_py_prefix.1.11.patch  06_py_prefix.patch  07_rgba.1.11.patch  07_rgba.patch  11_texture.patch  12_python3.13_1639.patch  bld.bat  icon.py  meta.yaml
sdk/: requirements.txt
